fixa white-space wrap i toggle button text

--- a/projects/komponentkartan/src/assets/partials/_components.toggle-button.scss
+++ b/projects/komponentkartan/src/assets/partials/_components.toggle-button.scss
@@ -22,6 +22,10 @@ $toggle-button-height: 30px;
       border-right-width: 0;
       padding-left: 17px;
       padding-right: 18px;
+    }
+    
+    > span > span{
+      white-space: nowrap;
     }   
   }
   :first-child .toggle-button-container {
